fixed overflow issue

--- a/client/src/pages/items/items.css
+++ b/client/src/pages/items/items.css
@@ -5,3 +5,7 @@
 .cardbox-height {
     height: 618px;
 }
+
+.scroll-cnt {
+    overflow: scroll;
+}
